# MojitoProcessor

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: ci.yml  docs.yml
Example_Notebooks/: gaps_noise_processing_pipeline.ipynb  gaps_seg_whittle_noise_processing_pipeline.ipynb  gw_processing_pipeline.ipynb  noise_processing_pipeline.ipynb  processing_pipeline.ipynb
MojitoProcessor/: SigProcessing.py  __init__.py  __version__.py  mojito_loader.py
MojitoProcessor/gaps/: __init__.py  extend.py  mask.py  segment.py  taper.py
MojitoProcessor/io/: __init__.py  read.py  write.py
MojitoProcessor/pipelines/: __init__.py  gapspipeline.py  pipeline.py
MojitoProcessor/pipelines/mojito/: __init__.py  gapspipeline.py  pipeline.py
MojitoProcessor/process/: sigprocess.py
docs/: api.rst  citing.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt
docs/notebooks/: gaps_seg_whittle_noise_processing_pipeline.ipynb  gw_processing_pipeline.ipynb  noise_processing_pipeline.ipynb  processing_pipeline.ipynb
tests/: conftest.py  test_gaps.py  test_mojito_loader.py  test_mojito_pipeline.py  test_read_and_process.py  test_sig_processing.py  test_write.py
