[project]
name = "mojito-noise-sprint"
version = "0.1.0"
description = "LISA Mojito L1 data loader and noise analysis tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "corner>=2.2.3",
    "eryn>=1.2.5",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["MojitoProcessor"]
